Bug 560827 - [14] CR followed by LF in a textblock is interpreted as two line endings
Change-Id: Ie161411e2b2f6c8b15c2283f5c5dcfb5d17c50a9
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>